# leet-code

./: .gitignore  15.3-sum.py  150.evaluate-reverse-polish-notation.js  198.house-robber.ts
helper/: Cargo.toml
helper/src/: main.rs
javascript/102.binary-tree-level-order-traversal/: 102.binary-tree-level-order-traversal.js
javascript/1137.n-th-tribonacci-number/: 1137.n-th-tribonacci-number.js
javascript/1343.number-of-sub-arrays-of-size-k-and-average-greater-than-or-equal-to-threshold/: 1343.number-of-sub-arrays-of-size-k-and-average-greater-than-or-equal-to-threshold.js
javascript/1492.the-kth-factor-of-n/: 1492.the-kth-factor-of-n.js
javascript/167.two-sum-ii-input-array-is-sorted/: 167.two-sum-ii-input-array-is-sorted.js
javascript/199.binary-tree-right-side-view/: 199.binary-tree-right-side-view.js
javascript/2073.time-needed-to-buy-tickets/: 2073.time-needed-to-buy-tickets.js
javascript/2405.optimal-partition-of-string/: 2405.optimal-partition-of-string.js
javascript/2441.largest-positive-integer-that-exists-with-its-negative/: 2441.largest-positive-integer-that-exists-with-its-negative.js
javascript/345.reverse-vowels-of-a-string/: 345.reverse-vowels-of-a-string.js
javascript/392.is-subsequence/: 392.is-subsequence.js
javascript/643.maximum-average-subarray-i/: 643.maximum-average-subarray-i.js
javascript/66.plus-one/: 66.plus-one.js
javascript/704.binary-search/: 704.binary-search.js
javascript/705.design-hash-set/: 705.design-hash-set.js
playground/typescript/: main.ts  package-lock.json  package.json
python/11.container-with-most-water/: 11.container-with-most-water.py
python/121.best-time-to-buy-and-sell-stock/: 121.best-time-to-buy-and-sell-stock.py
python/125.valid-palindrome/: 125.valid-palindrome.py
python/141.linked-list-cycle/: 141.linked-list-cycle.py
python/1472.designbrowser-history/: 1472.designbrowser-history.py
python/150.evaluate-reverse-polish-notation/: 150.evaluate-reverse-polish-notation.py
python/155.min-stack/: 155.min-stack.py
python/1593.split-a-string-into-the-max-number-of-unique-substrings/: 1593.split-a-string-into-the-max-number-of-unique-substrings.py
python/1598.crawler-log-folder/: 1598.crawler-log-folder.py
python/167.two-sum-ii-input-array-is-sorted/: 167.two-sum-ii-input-array-is-sorted.py
python/1929.Concatenation-of-Array/: 1929.Concatenation-of-Array.py
rust/: Cargo.toml
(+37 files in other folders)
