[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "9"
path = "src/bin/9/9.palindrome-number.rs"

[[bin]]
name = "1143"
path = "src/bin/1143/1143.longest-common-subsequence.rs"

[[bin]]
name = "1768"
path = "src/bin/1768/1768.merge-strings-alternately.rs"
