[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "9"
path = "src/bin/9/9.palindrome-number.rs"

[[bin]]
name = "14"
path = "src/bin/14/14.longest-common-prefix.rs"

[[bin]]
name = "28"
path = "src/bin/28/28.find-the-index-of-the-first-occurrence-in-a-string.rs"

[[bin]]
name = "198"
path = "src/bin/198/198.house-robber.rs"

[[bin]]
name = "1217"
path = "src/bin/1217/1217.minimum-cost-to-move-chips-to-the-same-position.rs"

[[bin]]
name = "1768"
path = "src/bin/1768/1768.merge-strings-alternately.rs"
