[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "9"
path = "src/bin/9/9.palindrome-number.rs"

[[bin]]
name = "14"
path = "src/bin/14/14.longest-common-prefix.rs"

[[bin]]
name = "39"
path = "src/bin/39/39.combination-sum.rs"

[[bin]]
name = "62"
path = "src/bin/62/62.unique-paths.rs"

[[bin]]
name = "136"
path = "src/bin/136/136.single-number.rs"

[[bin]]
name = "198"
path = "src/bin/198/198.house-robber.rs"

[[bin]]
name = "283"
path = "src/bin/283/283.move-zeroes.rs"

[[bin]]
name = "700"
path = "src/bin/700/700.search-in-a-binary-search-tree.rs"

[[bin]]
name = "701"
path = "src/bin//701/701.insert-into-a-binary-search-tree.rs"

[[bin]]
name = "628"
path = "src/bin/628/628.maximum-product-of-three-numbers.rs"

[[bin]]
name = "933"
path = "src/bin/933/933.number-of-recent-calls.rs"

[[bin]]
name = "1217"
path = "src/bin/1217/1217.minimum-cost-to-move-chips-to-the-same-position.rs"

[[bin]]
name = "1431"
path = "src/bin/1431/1431.kids-with-the-greatest-number-of-candies.rs"

[[bin]]
name = "1768"
path = "src/bin/1768/1768.merge-strings-alternately.rs"
